--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
