--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.2",
     "socket.io": "^4.7.2"
   }
