--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
