--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "moment-timezone": "^0.5.43",
     "next": "13.4.19",
     "next-pwa": "^5.6.0",
+    "nextjs-toploader": "^1.5.3",
     "postcss": "8.4.29",
+    "primeicons": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.16.0",
