--- a/client/package.json
+++ b/client/package.json
@@ -15,17 +15,17 @@
     "axios": "^1.5.0",
     "emoji-mart": "^5.5.2",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
-    "next": "13.4.19",
+    "next": "^14.0.3",
     "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.5.3",
     "postcss": "8.4.29",
     "primeicons": "^6.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3"
